# ALAI

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README
app/: main.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  styles.css
